[package]
name = "fqdn"
version = "0.3.12"
authors = ["Xophe <christophe.dousson@orange.com>"]
edition = "2021"
license = "MIT"
description = "FQDN (Fully Qualified Domain Name)"
repository = "https://github.com/Orange-OpenSource/fqdn"
documentation = "https://docs.rs/fqdn"
keywords = ["fqdn","dns"]
categories = ["data-structures"]

[features]
# By default, this crate allows also underscores ('_') in FQDN
# and has greater length limits than the RFC allows but
# domain labels can’t start or end with hyphens
default = [ "domain-label-cannot-start-or-end-with-hyphen" ]

# Activate all the features to conform to all RFC
# RFC1035 accepts only digits, letters and '-' in FQDN labels are 1 to 63 chars long
#         max length of FQDN including null label is 255 chars (i.e. 253 visible chars)
# RFC952: labels cannot start or end with hyphens
# RFC1123: labels can start with numbers
strict-rfc = [
    "domain-label-length-limited-to-63",
    "domain-name-length-limited-to-255",
    "domain-name-without-special-chars",
    "domain-name-should-have-trailing-dot",
    "domain-label-cannot-start-or-end-with-hyphen"
]

domain-name-length-limited-to-255 = []
domain-label-length-limited-to-63 = []
domain-name-without-special-chars = []
domain-name-should-have-trailing-dot = []
domain-label-cannot-start-or-end-with-hyphen = []
